--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.47",
     "morgan": "~1.9.1",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.5",
     "uuid": "^11.1.0",
